13/09/2013
* Additional updates and additions for xbmc add-on
* Added settings dialogue and variable checking
--------------
September 2013
Initial release